--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -1,19 +1,23 @@
-.nav-pills .nav-link {
-    background-color: #555; 
+.dropdown-toggle {
+    background-color: #454545;
+    border-radius: 8px;
     color: #fff;
-    transition: background-color 0.3s ease;
 }
 
-.nav-pills .nav-link:hover {
-    background-color: #777;
+.dropdown-toggle.show.nav-link {
+    background-color: #4f4e4e;
+    border-radius: 8px;
     color: #fff;
 }
-  
-.nav-pills .nav-link.active {
-    background-color: #0d6efd;
+
+.nav-link {
+    color: #c6c6c6;
+}
+
+.nav-link:hover {
     color: #fff;
 }
-  
-.nav-item.me-2 {
-    margin-right: 0.5rem;
+
+.search-input-width {
+    width: 200px;
 }
